@@ -525,7 +525,7 @@ public:
         ham_db_t db;
         memset(&db, 0, sizeof(db));
         CPPUNIT_ASSERT_EQUAL(HAM_INV_PARAMETER, 
-                ham_close(db, HAM_TXN_AUTO_ABORT|HAM_TXN_AUTO_COMMIT));
+                ham_close(&db, HAM_TXN_AUTO_ABORT|HAM_TXN_AUTO_COMMIT));
     }
 
     void closeWithCursorsTest(void)
